[gd_scene load_steps=11 format=3 uid="uid://c6xr8uy16bu2a"]

[ext_resource type="Script" path="res://scripts/enemies/necromancer.gd" id="1_fydtp"]
[ext_resource type="Texture2D" uid="uid://bcernm7rkurjg" path="res://graphics/spritesheets/Necromancer_creativekind-Sheet.png" id="1_sb4rw"]
[ext_resource type="Script" path="res://scripts/fsm.gd" id="2_yuot3"]
[ext_resource type="Script" path="res://scripts/enemies/basic_idle_state.gd" id="4_x2rax"]
[ext_resource type="Script" path="res://scripts/enemies/necromancer_cast_state.gd" id="5_o3tcv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l44xa"]

[sub_resource type="Animation" id="Animation_tykdh"]
resource_name = "CastSpell"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/NecromancerCastState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"revive_skeletons"
}]
}

[sub_resource type="Animation" id="Animation_k2nso"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_n5cdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yk50h"]
_data = {
"CastSpell": SubResource("Animation_tykdh"),
"Idle": SubResource("Animation_k2nso"),
"RESET": SubResource("Animation_n5cdc")
}

[node name="Necromancer" type="CharacterBody2D"]
script = ExtResource("1_fydtp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_l44xa")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture_filter = 1
texture = ExtResource("1_sb4rw")
offset = Vector2(0, -51)
hframes = 17
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yk50h")
}

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_yuot3")
current_state = NodePath("EnemyIdleState")

[node name="EnemyIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("4_x2rax")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="NecromancerCastState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("5_o3tcv")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="ReviveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/NecromancerCastState" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ReviveTimer" to="." method="_on_revive_timer_timeout"]
